syntax = "proto3";
package securecomm.v1;

option go_package = "github.com/you/securecomm/proto;proto";
option java_package = "com.securecomm.proto";
option java_multiple_files = true;
option csharp_namespace = "SecureComm.Proto";

import "google/protobuf/timestamp.proto";

message DeviceInfo {
  string user_id = 1;
  string device_id = 2;
  bytes public_key = 3;
  string device_name = 4;
}

message Ack {
  bool ok = 1;
  string message = 2;
}

message RegisterDeviceRequest {
  DeviceInfo device = 1;
}

message RegisterDeviceResponse {
  Ack ack = 1;
}

message EncryptedMessage {
  string message_id = 1;
  string from_user = 2;
  string from_device = 3;
  string to_user = 4;
  string to_device = 5;
  bytes ciphertext = 6;
  bytes metadata = 7;
  google.protobuf.Timestamp created_at = 8;
  int32 ttl_seconds = 9;
}

message SendMessageRequest {
  EncryptedMessage message = 1;
}

message SendMessageResponse {
  Ack ack = 1;
}

message PollRequest {
  DeviceInfo device = 1;
  int32 max_messages = 2;
}

service Relay {
  rpc RegisterDevice(RegisterDeviceRequest) returns (RegisterDeviceResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc PollMessages(PollRequest) returns (stream EncryptedMessage);
}
